--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
             <version>4.0.1</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
